--- a/src/main/webapp/css/noticeView.css
+++ b/src/main/webapp/css/noticeView.css
@@ -2,7 +2,7 @@
 
 .view_area{
     width: 100%;
-    height: 500px;
+    height: auto;
     margin: 0 auto;
     margin-top: 30px;
 
@@ -29,6 +29,7 @@
 }
 
 .content{
+	padding: 30px 0;
     height: auto;
     text-align: center;
     margin-top: 30px;
